--- a/PortalSocios/PortalSocios/Content/bootstrap.css
+++ b/PortalSocios/PortalSocios/Content/bootstrap.css
@@ -311,7 +311,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
@@ -473,7 +473,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
 }
@@ -1407,6 +1407,8 @@ pre code {
 table {
   max-width: 100%;
   background-color: transparent;
+  white-space: nowrap;
+  font-size: 12px;
 }
 
 th {
@@ -1414,7 +1416,6 @@ th {
 }
 
 .table {
-  width: 100%;
   margin-bottom: 20px;
 }
 
